--- a/css/style.css
+++ b/css/style.css
@@ -60,3 +60,68 @@ ul.menu a {
     font-weight: 200;
     overflow: hidden;
 }
+
+/* BURGER STYLING */
+
+.burger {
+    display: none;
+}
+
+.burger:hover {
+    cursor: pointer;
+}
+
+.burger:hover .line {
+    background-color: var(--color1);
+}
+
+@media only screen and (max-width: 1000px) {
+    nav {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .burger {
+        display: block;
+        transition: .2s;
+        width: 3em;
+        height: 20px;
+        position: relative;
+    }
+
+    .burger .line {
+        position: absolute;
+        width: 100%;
+        height: 1px;
+        background-color: var(--color1);
+        border-radius: 20px;
+        transition: top 0.2s .2s ease, width .2s .2s ease, background-color .2s .3s ease;
+    }
+
+    .burger .line:first-child {
+        top: 0;
+    }
+
+    .burger .line.line:nth-child(2) {
+        top: calc(50% - 2px);
+    }
+
+    .burger .line.line:nth-child(3) {
+        top: calc(100% - 4px);
+    }
+
+    .burger.active .line{
+        background-color: var(--colorhover);
+    }
+
+    .burger.active .line:first-child {
+        top: calc(100% - 4px);
+    }
+
+    .burger.active .line.line:nth-child(2) {
+        width: 60%;
+    }
+
+    .burger.active .line.line:nth-child(3) {
+        top: 0;
+    }
