Responsive menu and added opacity section

--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,17 @@ ul.menu a {
         transition: 0.7s;
     }
 
+    
+    nav .opacity{
+        position: absolute;
+        left:-100%;
+        width:100%;
+        height: 200vh;
+        /* opacity: 0.4; */
+        /* background-color: rgba(256,256,256,0.7); */
+        /* transition: 5s; */
+    }
+
     nav div:first-of-type.active{
         left:0%;
     }
@@ -169,5 +180,34 @@ ul.menu a {
 
     ul.menu a::after {
         display: none;
+    }
+}
+
+@media (max-width: 900px) and (orientation: landscape){
+    ul.menu {
+        padding-top: 5px;
+    }
+}
+
+@media only screen and (max-width: 760px) {
+    ul.menu {
+        width: 100%;
+        height: calc(100vh - 64px);
+    }
+
+    .opacity{
+        display: none;
+    }
+}
+
+@media (max-width: 700px) and (orientation: landscape){
+    ul.menu li {
+        height: 50px;
+        line-height: 50px;
+    }
+
+    ul.menu li a {
+        font-size: 1.7em;
+        letter-spacing: 1px;
     }
 }
