--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,7 @@ html {
     overflow-x: hidden;
     font-family: 'Oswald', sans-serif;
     color: var(--color1);
-    scroll-behavior: smooth;
-    
+    scroll-behavior: smooth; 
 }
 
 .container {
@@ -142,8 +141,7 @@ ul.menu a {
         transform: translate(0%);
         transition: 0.7s;
     }
-
-    
+ 
     nav .opacity{
         position: absolute;
         left:-100%;
@@ -209,5 +207,45 @@ ul.menu a {
     ul.menu li a {
         font-size: 1.7em;
         letter-spacing: 1px;
+    }
+}
+
+
+/* HEADER STYLING */
+header {
+    width: 100%;
+    height: 100vh;
+    max-height: 600px;
+    background: url(/img/bg_image.jpg) rgba(0, 0, 0, 0) no-repeat;
+    background-position: right top;
+    background-blend-mode: overlay;
+    background-size: cover;
+    position: relative;
+    overflow-x: hidden;
+}
+
+header p{
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    font-size: 7em;
+    text-transform: uppercase;
+    font-weight: 100;
+}
+
+header p:first-child{
+    bottom: 80px;
+    /* color: antiquewhite; */
+}
+
+@media only screen and (max-width: 700px) and (orientation: portrait) {
+
+    header {
+        background: url(/img/bg_image_min.jpg) rgba(0, 0, 0, 0) no-repeat;
+        background-position: right top;
+        background-blend-mode: overlay;
+        background-size: cover;
+        position: relative;
+        overflow-x: hidden;
     }
 }
