--- a/css/style.css
+++ b/css/style.css
@@ -232,7 +232,6 @@ header p{
 
 header p:first-child{
     bottom: 80px;
-    /* color: antiquewhite; */
 }
 
 @media only screen and (max-width: 700px) and (orientation: portrait) {
@@ -247,8 +246,7 @@ header p:first-child{
     }
 }
 
-/*    ABOUT SECTION     */
-
+/*             ABOUT SECTION             */
 .whitewraper{
     
     display: flex;
@@ -256,7 +254,7 @@ header p:first-child{
 }
 
 #white{
-    padding-top: 61px;
+    padding: 61px 0 61px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -314,6 +312,7 @@ header p:first-child{
 
 .aboutbutton:hover{
     background-color: rgb(194, 142, 103);
+    box-shadow: 0px 1px 10px -2px rgba(85,85,85,0.76);
 }
 
 .photoabout {
@@ -326,22 +325,34 @@ header p:first-child{
 
 @media (orientation: landscape){
     #white{
+        flex-direction: row;
+        justify-content: center;
+    }
+    .about{
+        width: 50%;
+    }
+    .photoabout{
+        width: 40%;
+        height: 600px;
+    }
+}
+
+@media (min-width:750px) and (orientation:portrait){
+    #white{
         /* margin: 50px 0; */
         flex-direction: row;
         justify-content: center;
     }
     .about{
         width: 50%;
-        padding: 0 5% 0 0;
     }
     .photoabout{
         width: 40%;
         height: 600px;
-
     }
 }
 
-@media (min-width: 1000px){
+@media (min-width: 1000px) and (orientation: landscape){
     #white{
         flex-direction: row-reverse;
     }
