About section styling

--- a/css/style.css
+++ b/css/style.css
@@ -248,9 +248,11 @@ header p:first-child{
 
 /*             ABOUT SECTION             */
 .whitewraper{
-    
+    background-color: white;
     display: flex;
-    justify-content: center; 
+    justify-content: center;
+    position: relative;
+    z-index:-2; 
 }
 
 #white{
@@ -258,14 +260,13 @@ header p:first-child{
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 1000px;
 }
 
 .about{
     padding: 0 5%;
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
-    max-width: 1000px;
     align-items: center;
     text-align: justify;
 }
@@ -327,9 +328,12 @@ header p:first-child{
     #white{
         flex-direction: row;
         justify-content: center;
+        /* align-items: center; */
     }
     .about{
         width: 50%;
+        align-self: stretch;
+        padding: 0 5% 0 0;
     }
     .photoabout{
         width: 40%;
@@ -339,11 +343,11 @@ header p:first-child{
 
 @media (min-width:750px) and (orientation:portrait){
     #white{
-        /* margin: 50px 0; */
         flex-direction: row;
         justify-content: center;
     }
     .about{
+        
         width: 50%;
     }
     .photoabout{
@@ -355,5 +359,24 @@ header p:first-child{
 @media (min-width: 1000px) and (orientation: landscape){
     #white{
         flex-direction: row-reverse;
+    }
+
+    .whitewraper::before{
+        content:"";
+        display: block;
+        position: absolute;
+        background-color: rgb(194, 142, 103);
+        height: calc(100% - 40px);
+        width: 30%;
+        top: 20px;
+        left: 5%;
+        z-index: -1;
+    }
+
+    .about{
+        padding: 0 5% 0 5%;
+        display: flex;
+        justify-content: center;
+        box-shadow: 0px 0px 40px -5px rgba(110, 110, 110, 0.76);
     }
 }
