--- a/css/style.css
+++ b/css/style.css
@@ -213,7 +213,7 @@ header {
     width: 100%;
     height: 100vh;
     max-height: 600px;
-    background: url(./img/bg_image.jpg) rgba(0, 0, 0, 0) no-repeat;
+    background: url(../img/bg_image.jpg) rgba(0, 0, 0, 0) no-repeat;
     background-position: right top;
     background-blend-mode: overlay;
     background-size: cover;
@@ -237,7 +237,7 @@ header p:first-child{
 @media only screen and (max-width: 700px) and (orientation: portrait) {
 
     header {
-        background: url(/img/bg_image_min.jpg) rgba(0, 0, 0, 0) no-repeat;
+        background: url(../img/bg_image_min.jpg) rgba(0, 0, 0, 0) no-repeat;
         background-position: right top;
         background-blend-mode: overlay;
         background-size: cover;
