--- a/css/style.css
+++ b/css/style.css
@@ -457,31 +457,16 @@ footer{
 
 
 /*             ABOUT SECTION             */
-.whitewraper{
-    background-color: white;
-    display: flex;
-    justify-content: center;
-    position: relative;
-    z-index:-2; 
-}
-
-#white{
-    padding: 61px 0 61px 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    max-width: 1000px;
-}
-
 .about{
-    padding: 0 5%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: justify;
+    padding-top: 65px;
+    min-height: calc(100vh - 5vh);
 }
 
-.about h1{
+.text{
+    padding: 10% 10%;
+}
+
+.text h2{
     font-size: 40px;
     margin-bottom: 10px;
     text-align: center;
@@ -490,40 +475,10 @@ footer{
     margin-bottom: 25px;
 }
 
-.about p{
+.text p{
     line-height: 220%;
     text-align: justify;
     font-size: 1.7em;
-}
-
-.aboutbutton{
-    outline: 0;
-    box-shadow: none;
-    border-style: none;
-    border-radius: 2px;
-    cursor: pointer;
-    position: relative;
-    margin: 30px 0;
-    background-color: rgb(224, 173, 134);
-    transition: .3s;
-  }
-  
-.about button a{
-    display: block;
-    text-decoration: none;
-    padding: 0 30px;
-    line-height: 2.2em;
-    font-size: 1.5em;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    font-family: 'Oswald', sans-serif;
-    color: white;
-    cursor: pointer;
-}
-
-.aboutbutton:hover{
-    background-color: rgb(194, 142, 103);
-    box-shadow: 0px 1px 10px -2px rgba(85,85,85,0.76);
 }
 
 .photoabout {
@@ -531,62 +486,39 @@ footer{
     width: 90%;
     background: url(../img/about_image.jpg);
     background-size: cover;
-    background-position: center;
+    background-position: top;
+    margin: 5% 5%;
 }
 
 @media (orientation: landscape){
-    #white{
-        flex-direction: row;
-        justify-content: center;
-        /* align-items: center; */
-    }
-    .about{
-        width: 50%;
-        align-self: stretch;
-        padding: 0 5% 0 0;
+    .text{
+        padding: 5% 5%;
     }
     .photoabout{
         width: 40%;
-        height: 600px;
+        height: 500px;
+        float: left;
+        margin: 30px 30px;
     }
 }
 
-@media (min-width:750px) and (orientation:portrait){
-    #white{
-        flex-direction: row;
-        justify-content: center;
-    }
-    .about{
-        
-        width: 50%;
-    }
-    .photoabout{
-        width: 40%;
-        height: 600px;
+@media (min-width:700px) and (orientation:portrait){
+     .photoabout{
+        float: left;
+        max-width: 300px;
+        margin: 2% 2%;
     }
 }
 
 @media (min-width: 1000px) and (orientation: landscape){
-    #white{
-        flex-direction: row-reverse;
+    .shadow{
+        max-width: 1200px;
+        padding: 0 50px;
+        margin: 2% auto;
+        box-shadow: 0px 0px 10px -5px rgba(110, 110, 110, 0.76);
     }
 
-    .whitewraper::before{
-        content:"";
-        display: block;
-        position: absolute;
-        background-color: rgb(194, 142, 103);
-        height: calc(100% - 40px);
-        width: 30%;
-        top: 20px;
-        left: 5%;
-        z-index: -1;
-    }
-
-    .about{
-        padding: 0 5% 0 5%;
-        display: flex;
-        justify-content: center;
-        box-shadow: 3px 4px 10px -5px rgba(110, 110, 110, 0.76);
+    .photoabout{
+        height: 600px;
     }
 }
