--- a/css/style.css
+++ b/css/style.css
@@ -208,9 +208,10 @@ ul.menu a {
 header {
     width: 100%;
     height: 100vh;
-    max-height: 700px;
-    background: url(../img/bg_image.jpg) rgba(0, 0, 0, 0) no-repeat;
-    background-position: right top;
+    max-height: 800px;
+    background: url(../img/DSC_0496.jpg) no-repeat;
+    background-position:top center;
+    background-attachment: fixed;
     background-blend-mode: overlay;
     background-size: cover;
     position: relative;
@@ -226,17 +227,6 @@ header p{
     font-weight: 100;
 }
 
-@media only screen and (max-width: 700px) and (orientation: portrait) {
-    header {
-        background: url(../img/bg_image_min.jpg) rgba(0, 0, 0, 0) no-repeat;
-        background-position: right top;
-        background-blend-mode: overlay;
-        background-size: cover;
-        position: relative;
-        overflow-x: hidden;
-    }
-}
-
 /* REPERTOIRE SECTION STYLING */
 #repertoire{
     display: flex;
@@ -244,8 +234,8 @@ header p{
     align-items: center;
     justify-content: center;
     text-align: center;
-    margin-top: 100px;
-    margin-bottom: 100px;
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
 
 #repertoire h2{
@@ -275,13 +265,23 @@ header p{
     height: 150px;
     width: 200px;
     margin: 0 auto;
-    box-shadow: 0px 2px 15px -3px rgba(85,85,85,0.76);
+    box-shadow: 0px 0px 15px -5px rgba(110, 110, 110, 0.76);
     border-radius: 3%;
+}
+
+@media only screen and (min-width: 1000px){
+    #repertoire{
+        background: rgba(255,255,255, .9);
+    }
 }
 
 /* SECTION QUOTE */
 .quote{
-    background-color: #E5E7EB;
+    /* background-color: #E5E7EB; */
+    background: url(/img/bg_image2.jpg);
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: right top;
 }
 
 .quote div{
@@ -373,90 +373,7 @@ header p{
     }
 }
 
-/* FOOTER SECTION */
-footer{
-    height: 5vh;
-    background-color: var(--color1);
-    color: var(--colorhover);
-    text-align: center;
-    line-height: 5vh;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*             ABOUT SECTION             */
+/*             ABOUT PAGE             */
 .about{
     padding-top: 65px;
     min-height: calc(100vh - 5vh);
@@ -479,6 +396,12 @@ footer{
     line-height: 220%;
     text-align: justify;
     font-size: 1.7em;
+}
+
+.text .signature{
+    margin-top: 5vh;
+    font-weight: 600;
+    text-align: right;
 }
 
 .photoabout {
@@ -511,14 +434,52 @@ footer{
 }
 
 @media (min-width: 1000px) and (orientation: landscape){
+    .about{
+        background: url(/img/DSC_0496.jpg);
+        background-position: center;
+        background-attachment: fixed;
+        background-size: cover;
+        padding-bottom: 50px;
+    }
     .shadow{
         max-width: 1200px;
         padding: 0 50px;
-        margin: 2% auto;
+        margin: 50px auto 0 auto;
         box-shadow: 0px 0px 10px -5px rgba(110, 110, 110, 0.76);
+        background-color: rgba(255, 255, 255, 0.93);
     }
-
     .photoabout{
         height: 600px;
+    }
+}
+
+/*           CONTACT PAGE            */
+
+.contact{
+    height: calc(100vh - 5vh);
+    background: url(/img/DSC_0496.jpg);
+    background-position: top right;
+    background-size: cover;
+}
+
+/*           FOOTER SECTION            */
+footer{
+    height: 5vh;
+    background-color: var(--color1);
+    color: var(--colorhover);
+    text-align: center;
+    line-height: 5vh;
+}
+
+
+@media(min-width: 1000px){
+    body{
+        background: url(/img/DSC_0496.jpg);
+        background-position: top right;
+        background-attachment: fixed;
+        background-size: cover;
+    }
+    header{
+        background: none;
     }
 }
