--- a/css/style.css
+++ b/css/style.css
@@ -279,7 +279,7 @@ header p{
 /* SECTION QUOTE */
 .quote{
     /* background-color: #E5E7EB; */
-    background: url(/img/bg_image2.jpg);
+    background: url(../img/bg_image2.jpg);
     background-attachment: fixed;
     background-size: cover;
     background-position: right top;
@@ -437,7 +437,7 @@ button a{
 
 @media (min-width: 1000px) and (orientation: landscape){
     .about{
-        background: url(/img/DSC_0496.jpg);
+        background: url(../img/DSC_0496.jpg);
         background-position: center;
         background-attachment: fixed;
         background-size: cover;
@@ -457,7 +457,7 @@ button a{
 
 /*           CONTACT PAGE            */
 #contact{
-    background: url(/img/bg_image2.jpg);
+    background: url(../img/bg_image2.jpg);
     background-position: top right;
     background-size: cover;
     min-height: calc(100vh - 5vh);
@@ -598,7 +598,7 @@ footer{
 
 @media(min-width: 700px){
     body{
-        background: url(/img/DSC_0496.jpg);
+        background: url(../img/DSC_0496.jpg);
         background-position: top right;
         background-attachment: fixed;
         background-size: cover;
